# legal-check

./: .gitignore  README.md  pyproject.toml
legal_check/: __init__.py
